<resources>
    <string name="app_name">Gallery</string>
    <string name="mod_base">This mod is based in version 4.5.2</string>
    <string name="telegram_channel">Telegram Channel</string>
    <string name="app_translator">Translator</string>
    <string name="app_translator_name">None</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="animation">Transition animation</string>
    <string name="animation_card">Card</string>
    <string name="animation_cube">Cube</string>
    <string name="animation_fade">Fade</string>
    <string name="animation_flip">Flip</string>
    <string name="animation_slide">Slide</string>
    <string name="auto_black_background">Auto black background</string>
    <string name="auto_hide_navbar">Auto hide navbar</string>
    <string name="auto_hide_navbar_tips">Warning: due to the limitation before Android 4.4, when this bar is hidden, first gesture(touch, swipe, pinch) can only show the bar, then works normally!</string>
    <string name="theme">Theme</string>
    <string name="bkgnd_pattern">Grid pattern background</string>
    <string name="bkgnd_pattern_summary">Grid pattern background for image with alpha channel</string>
    <string name="browse">Browse</string>
    <string name="browse_mode">Mode</string>
    <string name="browse_explorer">Explorer</string>
    <string name="browse_stack">Stack</string>
    <string name="browse_grid">Grid</string>
    <string name="browse_list">List</string>
    <string name="cache">Cache</string>
    <string name="cache_need_upgrade">Thumbnail cache need upgrade and will be deleted to regenerate.</string>
    <string name="cache_previews">Cache fullscreen previews</string>
    <string name="cache_previews_summary">Cache fullscreen previews to speed up next loading</string>
    <string name="camera">Camera</string>
    <string name="can_not_hide_camera_folder">Can not hide the album used by the camera app! If you want to hide some photos, move them to another album.</string>
    <string name="can_not_operate_now">The system media scanner is busy now, it may delete these files! Please try again later.</string>
    <string name="clear_previews">Clear previews cache</string>
    <string name="clear_previews_confirm">Clear fullscreen previews cache?</string>
    <string name="clear_thumbnails">Clear thumbnails cache</string>
    <string name="clear_thumbnails_confirm">Clear micro thumbnails cache?</string>
    <string name="copy_to">Copy to</string>
    <string name="cover">Change cover</string>
    <string name="crop">Crop</string>
    <string name="crop_by_cropper">By cropper</string>
    <string name="crop_thumbnail">Crop thumbnails into square</string>
    <string name="custom">Customize…</string>
    <string name="default">Default</string>
    <string name="delay_load">Delay load real image</string>
    <string name="delay_load_summary">Load real size image when zoom in to save power</string>
    <string name="delete">Delete</string>
    <string name="deselect_all">Deselect all</string>
    <string name="desktop_link">Link to desktop</string>
    <string name="details">Details</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="exclude">Exclude</string>
    <string name="exclude_confirm">Excluding a folder will exclude all the sub-folders, but if you are excluding multiple folders with same level, select their common parent in the following list will make thing easy:</string>
    <string name="excluded_tips">Folders excluded, you can restore in albums settings.</string>
    <string name="fix_date">Fix date</string>
    <string name="fix_date_confirm">"Try to fix the file date and media store with taken date in EXIF, to correct the sort order.

Continue to fix?"</string>
    <string name="flip_horizontal">Flip horizontal</string>
    <string name="flip_vertical">Flip vertical</string>
    <string name="force_true_color">Force true color decoding</string>
    <string name="force_true_color_summary">Force output 32bits true color image, may reduce the resolution</string>
    <string name="interface">Interface</string>
    <string name="grant_sd_permission">In the next screen, please select the root path of the SD card at left sidebar and confirm at bottom, to grant the writing permission of the SD card.</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="hide_confirm">"This command will hide all audios/videos/pictures in it and its sub-folders with Android .nomedia way.
If you just want it invisible, please select Exclude.

Continue to hide?"</string>
    <string name="hide_status_bar">Hide status bar</string>
    <string name="horizontal_scroll">Horizontal navigation</string>
    <string name="include_video">Include videos</string>
    <string name="included_folders">Included folders</string>
    <string name="included_folders_summary">Select folders to scan, otherwise all storage will be scanned</string>
    <string name="excluded_folders">Excluded folders</string>
    <string name="excluded_folders_summary">Select folders that will not be scanned, to hide media or speed up loading</string>
    <string name="loading">Loading…</string>
    <string name="load_failed">Load failed!</string>
    <string name="max_brightness">Maximum brightness when view</string>
    <string name="move_to">Move to</string>
    <string name="new_folder">New</string>
    <string name="no_location_in_picture">No location in the picture!</string>
    <string name="no_picture_in_album">No pictures in the album!</string>
    <string name="no_write_sd_permission">"Failed!
Android 4.4 don't allow non-stock app to modify the external SD card!
We can't solve this system limitation!"</string>
    <string name="open_last_album">Open last album</string>
    <string name="open_last_album_summary">Open the last browsed album when startup</string>
    <string name="pan_and_zoom">Pan and zoom animation</string>
    <string name="password_input">Input password</string>
    <string name="password_invalid">Invalid password!</string>
    <string name="password_cleared">Password has been cleared!</string>
    <string name="password_confirm">Confirm password</string>
    <string name="password_mode">Password mode</string>
    <string name="password_mode_pattern">Pattern</string>
    <string name="password_mode_pin">PIN</string>
    <string name="password_protect">Access by password</string>
    <string name="password_setup">Setup new password</string>
    <string name="password_stored">Password has been saved. If you forget it, please reinstall the app to clear it.</string>
    <string name="path">Path</string>
    <string name="pick">Pick</string>
    <string name="protect_hidden">Hidden albums</string>
    <string name="random">Random</string>
    <string name="ratio">Aspect ratio</string>
    <string name="rename">Rename</string>
    <string name="rename_format" formatted="false">"%Y=Year, %M=Month, %D=Day
%h=Hour, %m=Minute, %s=Second"</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_180">Rotate 180°</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="running_wait">Please wait…</string>
    <string name="save_file_failed">"Save image to file failed!
If you are setting wallpaper, please go to Gallery to set!"</string>
    <string name="screen_orientation">Change Screen orientation</string>
    <string name="screen_orientation_default">By system setting</string>
    <string name="screen_orientation_sensor">By orientation sensor</string>
    <string name="screen_orientation_imagesize">By image size</string>
    <string name="security">Security</string>
    <string name="select">Select</string>
    <string name="select_a_folder">Select a folder</string>
    <string name="set_as">Set as</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_message">%s</string>
    <string name="show_controls">Show controls at bottom</string>
    <string name="show_hidden">Show hidden</string>
    <string name="hide_hidden">Hide hidden</string>
    <string name="show_in_map">Show in map</string>
    <string name="shrink">Shrink</string>
    <string name="slideshow">Slideshow</string>
    <string name="slideshow_interval">Interval</string>
    <string name="slideshow_shuffle">Shuffle showing</string>
    <string name="single_tap_zoom">Single tap to zoom</string>
    <string name="single_tap_zoom_summary">Single tap to zoom and double tap to show action bar, otherwise inverse</string>
    <string name="sort">Sort</string>
    <string name="sort_by_date">By date</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_path">By path</string>
    <string name="sort_by_size">By size</string>
    <string name="sort_by_taken_date">By taken date</string>
    <string name="sort_default_mode">"Display order "</string>
    <string name="sort_numerical">Numerical sorting names</string>
    <string name="sort_numerical_summary">Consider the digits in the names as numerical order</string>
    <string name="split_action_bar">Bottom action bar</string>
    <string name="split_action_bar_summary_off">Show action bar at the bottom</string>
    <string name="top_on">On top</string>
    <string name="top_cancel">Cancel top</string>
    <string name="view">View</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="zoom_buttons">Zoom buttons</string>
    <string name="pic_type">Mimetype</string>
    <string name="pic_resolution">Resolution</string>
    <string name="pic_size">Size</string>
    <string name="pic_date">Date</string>
    <string name="pic_camera">Camera</string>
    <string name="pic_description">Description</string>
    <string name="pic_exif_info">EXIF</string>
    <string name="pic_address">Address</string>
    <string name="authorize_again">Please click here to reauthorize.</string>
    <string name="authorization_expired">Authorization expired</string>
    <string name="cloud_catalog_album">Cloud album</string>
    <string name="cloud_catalog_drive">Cloud drive</string>
    <string name="cloud_catalog_subscription">Picture subscription</string>
    <string name="cloud_backup">Backup</string>
    <string name="cloud_backup_last_time">Last backup: %s</string>
    <string name="cloud_backup_only_charging">While charging only</string>
    <string name="cloud_backup_only_wifi">Over WiFi only</string>
    <string name="cloud_backup_summary">Auto backup to the cloud</string>
    <string name="cloud_backup_warning_cost">By uploading content, you may incur carrier costs.</string>
    <string name="cloud_amazon">Amazon</string>
    <string name="cloud_baidu">Baidu</string>
    <string name="cloud_box">Box</string>
    <string name="cloud_discovery">Discovery</string>
    <string name="cloud_dropbox">Dropbox</string>
    <string name="cloud_flickr">Flickr</string>
    <string name="cloud_flickr_public">Discovery</string>
    <string name="cloud_flickr_personal_all">All pictures</string>
    <string name="cloud_gdrive">Google Drive</string>
    <string name="cloud_kuaipan">KuaiPan</string>
    <string name="cloud_onedrive">OneDrive</string>
    <string name="cloud_owncloud">OwnCloud</string>
    <string name="version">9.7</string>
    <string name="app_name_full">QuickPic Gallery</string>
    <string name="version_number">Version: 9.7 (Methuselah)</string>
    <string name="build_type">stable</string>
    <string name="update_channel">Update channel</string>
    <string name="update_check_now">Check for updates</string>
    <string name="update_warning">After downloading the update, the installation process must be manual</string>
    <string name="update_auto">Check automatically</string>
    <string name="update_auto_desc">Check for updates when opening the app</string>
</resources>