<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_bar_sort" android:id="@id/sort" android:title="@string/sort" android:showAsAction="always" />
    <item android:id="@id/slideshow" android:title="@string/slideshow" android:showAsAction="always" />
    <item android:id="@id/browse_mode" android:title="@string/browse_mode" />
    <item android:id="@id/hide" android:title="@string/hide" />
    <item android:id="@id/top" android:title="@string/top_on" />
    <item android:id="@id/exclude" android:title="@string/exclude" />
    <item android:id="@id/delete" android:title="@string/delete" />
    <item android:id="@id/rename" android:title="@string/rename" />
    <item android:id="@id/cover" android:title="@string/cover">
        <menu>
            <item android:id="@id/cover_select" android:title="@string/select" />
            <item android:id="@id/cover_default" android:title="@string/default" />
        </menu>
    </item>
    <item android:id="@id/fix_date" android:title="@string/fix_date" />
</menu>
