<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/slideshow" android:title="@string/slideshow" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_bar_edit" android:id="@id/edit" android:title="@string/edit" android:showAsAction="always" />
    <item android:id="@id/delete" android:title="@string/delete" android:showAsAction="always" />
    <item android:id="@id/share" android:title="@string/share" android:showAsAction="always" />
    <item android:id="@id/set_as" android:title="@string/set_as" />
    <item android:id="@id/move_to" android:title="@string/move_to" />
    <item android:id="@id/copy_to" android:title="@string/copy_to" />
    <item android:id="@id/rename" android:title="@string/rename" />
    <item android:id="@id/rotate" android:title="@string/rotate" android:showAsAction="ifRoom" />
    <item android:id="@id/show_in_map" android:title="@string/show_in_map" />
    <item android:id="@id/details" android:title="@string/details" />
</menu>
