<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:paddingTop="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="56.0dip" android:layout_height="56.0dip" android:src="@mipmap/ic_launcher_round" android:scaleType="centerInside" android:adjustViewBounds="true" android:minWidth="56.0dip" />
    <TextView android:textColor="?android:textColorPrimary" android:ellipsize="marquee" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/app_name_full" android:singleLine="true" style="@style/TextAppearance.Title.ActionBar" />
    <TextView android:textSize="16.0sp" android:textColor="?android:textColorSecondary" android:ellipsize="marquee" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/version_number" android:singleLine="false" style="@style/TextAppearance.PreferenceTitle.Settings" />
    <TextView android:textSize="12.0sp" android:textColor="?android:textColorSecondary" android:ellipsize="marquee" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/build_type" android:singleLine="true" android:textAllCaps="true" />
    <include layout="@layout/pref_divider" />
</LinearLayout>
